@@ -4,6 +4,7 @@ Revision history for {{$dist->name}}
           - fixed bad link in 'SEE ALSO'
           - fixed test failure due to bad plan when MooseX::Types is not
             available
+          - fixed test failure when Devel::PartialDump is not installed
 
 0.002     2013-03-04 10:43:05 PST-0800 (Karen Etheridge)
           - fix extraction of type name from MooseX::Types types
